# polsca

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  requirements.txt
.github/workflows/: buildAndTest.yml  self-hosted-build-and-test.yml
Docker/: Dockerfile
docs/: DOCKER.md  OLD_PB_FLOW.md  POLYBENCH.md  PREREQUISITES.md
example/: .gitignore  machsuite.yaml  pb-flow  polybench-medium.yaml  polybench.yaml
example/encrypt/: build.sh  encrypt.c
example/hashed2mm/: hashed2mm.c
example/results/: machsuite.csv  polybench-baseline.csv  polybench-polymer-lt-ap.csv  polybench-polymer.csv  results.ipynb
include/phism/Transforms/: Mem2PtrCall.h
lib/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  Mem2PtrCall.cc
lib/llvm/Transforms/: CMakeLists.txt  MemRefToArray.cc  Utils.cc  VhlsLLVMRewriter.cc
notebooks/: polybench-baseline-results.ipynb  polybench-medium-results.ipynb  polybench-results.ipynb  polybench-small-results.ipynb  polybench-split.ipynb  search-codegen.ipynb
pyphism/machsuite/: ms_flow.py
pyphism/phism_runner/: options.py  runner.py
pyphism/polybench/: pb_flow.py  pb_flow_test.py
pyphism/utils/: helper.py  helper_test.py
python/utils/: polybench.py
scripts/: build-llvm.sh  build-phism.sh  build-polygeist.sh  build-polymer.sh  check-vitis.sh  fix-cosim.py  ms-flow.py  pb-flow  pb-flow.py  pb-report.py  phism-runner.py  polybench-base.py  rosetta.py  search-codegen.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/phism-opt/: CMakeLists.txt  phism-opt.cc
(+90 files in other folders)
